# venus

./: .gitignore  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.bak.rst  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
api-ref/source/: conf.py  index.rst  parameters.yaml  status.yaml
api-ref/source/v1/: anomaly-detect.inc  api-versions.inc  custom-config.inc  custom_config.inc  index.rst  parameters.yaml  search-analyse-logs.inc  search-instance-callchain.inc  search-instance-requestids.inc  search-logs-download.inc  search-logs.inc  search-params.inc  search-typical-logs.inc  search.inc
devstack/: README.md  plugin.sh  settings
devstack/fluentd-conf/: td-agent.conf
devstack/fluentd-conf/filter/: 00-record_transformer.conf  01-rewrite.conf.c
devstack/fluentd-conf/input/: 06-cyborg.conf  08-neutron.conf  09-vitrage.conf  11-cinder.conf  12-manila.conf  16-palcement.conf  18-magnum.conf  barbican.conf  cinder.conf  cyborg.conf  designate.conf  glance.conf  heat.conf  ironic.conf  keystone.conf  magnum.conf  manila.conf  neutron.conf  nova.conf  octavia.conf  palcement.conf  senlin.conf  swift.conf  syslog.conf  venus.conf  vitrage.conf  zun.conf
devstack/fluentd-conf/output/: 00-local.conf.back  01-es.conf
doc/: README.rst  requirements.txt
doc/source/: .gitreview  conf.py  index.rst
doc/source/contributor/: contributing.rst  index.rst  releasenotes.rst
etc/venus/: README-venus.conf.sample  api-httpd.conf  api-paste.ini  logging_sample.conf  policy.json  rootwrap.conf  venus.conf
etc/venus/rootwrap.d/: venus.filters
openstack_venus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  requires.txt
releasenotes/source/: conf.py  index.rst
tools/: flake8wrap.sh
tools/config/: venus-config-generator.conf  venus-policy-generator.conf
venus/: __init__.py  context.py  exception.py  i18n.py  manager.py  rpc.py  service.py  utils.py  version.py
venus/api/: __init__.py  common.py  extensions.py  urlmap.py  versions.py  xmlutil.py
venus/api/contrib/: __init__.py
venus/api/middleware/: auth.py  env.py  fault.py  sizelimit.py
venus/api/openstack/: __init__.py  wsgi.py
venus/api/schemas/: atom-link.rng
venus/api/v1/: controller.py  router.py
venus/cmd/: api.py  manage.py  task.py
venus/common/: config.py  utils.py
venus/conf/: __init__.py  api.py  common.py  core.py  db.py  elasticsearch.py  profiler.py
venus/db/: __init__.py  alembic.ini  api.py  base.py  common.py  migration.py
venus/hacking/: checks.py  common.py
venus/locale/: venus-log-info.pot  venus-log-warning.pot
venus/objects/: __init__.py  base.py
venus/task/: adapter.py  timer.py
venus/tests/: test_hacking.py
venus/wsgi/: common.py  eventlet_server.py  wsgi.py
zzh/: readme.txt
(+61 files in other folders)
