[metadata]
name = venus
summary = OpenStack Log Management as a Service
description-file =
    README.rst
author = Brin Zhang
author-email = zhangbailin@inspur.com
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    venus

[entry_points]
venus.database.migration_backend =
    sqlalchemy = venus.db.sqlalchemy.migration
