[metadata]
name = venus
summary = OpenStack Log Management as a Service
description_file =
    README.rst
author = Brin Zhang
author_email = zhangbailin@inspur.com
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8

[files]
packages =
    venus

[entry_points]
console_scripts =
    venus-manage = venus.cmd.manage:main
    venus-api = venus.cmd.api:main
