[metadata]
name = openstack-venus
summary = OpenStack Log Management as a Service
description_file =
    README.rst
long_description_content_type = text/markdown
author = Brin Zhang
author_email = zhangbailin@inspur.com
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    venus

[entry_points]
console_scripts =
    venus_manager = venus.cmd.manage:main
    venus_api = venus.cmd.api:main
    venus_task = venus.com.task:main

venus.database.migration_backend =
    sqlalchemy = oslo_db.sqlalchemy.migration
